# NXP-Demo

./: CMakeLists.txt  README.md  docs.md  main.c
.cache/clangd/index/: _btn_list_pause_alpha_42x42.c.E59749A59598DF6C.idx  _btn_list_play_alpha_42x42.c.4D0899FEDCEB95F1.idx  _btn_loop_alpha_15x15.c.C9DC08C46AF4A12F.idx  _btn_next_alpha_37x37.c.DBB222F8B18D3BB4.idx  _btn_pause_alpha_48x48.c.F14492164947CCED.idx  _btn_play_alpha_48x48.c.2E636DF63D5A4EB0.idx  _btn_prev_alpha_37x37.c.781C776EB226D428.idx  _btn_rnd_alpha_15x15.c.1E82D752EA9AFAE9.idx  _cover_1_alpha_105x105.c.32968A461B443C96.idx  _cover_2_alpha_105x105.c.815135AA924E593D.idx  _cover_3_alpha_105x105.c.3E489421BE2B0F85.idx  _icn_chart_alpha_15x15.c.ECF8F843AEA042D4.idx  _icn_chat_alpha_15x15.c.C80813560D324E77.idx  _icn_download_alpha_15x15.c.29F8C4B37682FB88.idx  _icn_heart_alpha_15x15.c.61DADF77984CE10B.idx  _icn_slider_alpha_15x15.c.E3DF5F5BFDD19321.idx  _wave_bottom_alpha_480x29.c.CEFFC177FCE5A206.idx  _wave_top_alpha_480x29.c.8C87458F0F05030A.idx  code128.c.AEDB9B279A7D3599.idx  code128.h.7B1C3D4BD9F2A095.idx  custom.c.1E2DD57925C783AD.idx  custom.h.58A61B0A3CED7EDF.idx  events_init.c.0E1431B7FAA7EE0E.idx  events_init.h.4B07DD82D3265931.idx  gifdec.c.408DD0B09C7B97D7.idx  gifdec.h.067804D7FBE0D7B5.idx  gui_guider.c.581189B9E9F5FE64.idx  gui_guider.h.833A7228B919444D.idx  guider_fonts.h.7F78D95990BAFC27.idx  lodepng.c.E02337211708E8CF.idx  lodepng.h.C3B9FCDD7C665E73.idx  lv_anim.c.D21BBF0C903248DD.idx  lv_anim.h.C01F4DD73184D00D.idx  lv_anim_timeline.c.7E139B427DE6614D.idx  lv_anim_timeline.h.D0765712E7F24745.idx  lv_animimg.c.DB0AF50EF5672E60.idx  lv_animimg.h.7BF9F7463D2559A8.idx  lv_api_map.h.85328C7594682407.idx  lv_arc.c.44A3C3A6C67CF1F5.idx  lv_arc.h.A30B190795F23418.idx  (+398 more)
custom/: customar.c
doc/: MidReport.md  docs.md
music/custom/: custom.c
